[package]
name = "lokikv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server-db"
path = "src/db/main.rs"

[[bin]]
name = "client"
path = "src/cli/main.rs"

[dependencies]
bincode = "1.3.3"
clap = { version = "4.5.30", features = ["derive"] }
rayon = "1.10.0"
serde = { version = "1.0.218", features = ["derive"] }
shlex = "1.3.0"
tokio = { version = "1.43.0", features = ["full"] }
pest = "2.7.15"
pest_derive = "2.7.15"
