[package]
name = "lokikv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server-db"
path = "src/db/main.rs"

[[bin]]
name = "client"
path = "src/cli/main.rs"

[dependencies]
bincode = "1.3.3"
bit-set = "0.8.0"
clap = { version = "4.5.17", features = ["derive"] }
pest = "2.6"
pest_derive = "2.6"
rayon = "1.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shlex = "1.3.0"
tokio = { version = "1.41.1", features = ["full"] }
